--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>springb-boot-starter-aop</artifactId>
         </dependency>
-
+        <!-- 添加druid依赖 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.1</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
             <!--<artifactId>spring-boot-devtools</artifactId>-->
